# libexponent

./: CMakeLists.txt  Jenkinsfile  README.md
cmake/: ExponentConfig.cmake.in
include/exponent/: exponent.h
jenkins/: stirling-build.sh  stirling-publish.sh  test.sh
src/: exponent.cpp
test/: CMakeLists.txt
test/src/: test_exponent.cpp
